packages/chql-core/src/generated/CriteriaQueryAntlrParser.ts
// Generated from docs/antlr4/CriteriaQueryAntlrParser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { CriteriaQueryAntlrParserListener } from "./CriteriaQueryAntlrParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class CriteriaQueryAntlrParser extends antlr.Parser {
    public static readonly KKEY_IDENTIFIER = 1;
    public static readonly NUMBER = 2;
    public static readonly STRING = 3;
    public static readonly EQ = 4;
    public static readonly LT = 5;
    public static readonly LT_EQ = 6;
    public static readonly GT = 7;
    public static readonly GT_EQ = 8;
    public static readonly REGEX_MATCH = 9;
    public static readonly ALARM = 10;
    public static readonly ALL = 11;
    public static readonly AND = 12;
    public static readonly ANY = 13;
    public static readonly HAS = 14;
    public static readonly IN = 15;
    public static readonly IS = 16;
    public static readonly LIKE = 17;
    public static readonly MARK = 18;
    public static readonly MATCHES = 19;
    public static readonly NO = 20;
    public static readonly NOT = 21;
    public static readonly NULL = 22;
    public static readonly OR = 23;
    public static readonly VALUE = 24;
    public static readonly VALUES = 25;
    public static readonly OPEN_PARENTHESIS = 26;
    public static readonly CLOSE_PARENTHESIS = 27;
    public static readonly COMMA = 28;
    public static readonly SPACES = 29;
    public static readonly RULE_parse = 0;
    public static readonly RULE_criteria = 1;
    public static readonly RULE_simple_criteria = 2;
    public static readonly RULE_criterion_all = 3;
    public static readonly RULE_criterion_kkey_with_value = 4;
    public static readonly RULE_criterion_kkey_with_value_in = 5;
    public static readonly RULE_criterion_kkey_is_null = 6;
    public static readonly RULE_criterion_has_no_alarm = 7;
    public static readonly RULE_criterion_has_alarm = 8;
    public static readonly RULE_criterion_monitoring_has_mark = 9;
    public static readonly RULE_comparison_operator = 10;
    public static readonly RULE_kkey_value = 11;

    public static readonly literalNames = [
        null, null, null, null, "'='", "'<'", "'<='", "'>'", "'>='", "'=~'", 
        "'ALARM'", "'ALL'", "'AND'", "'ANY'", "'HAS'", "'IN'", "'IS'", "'LIKE'", 
        "'MARK'", "'MATCHES'", "'NO'", "'NOT'", "'NULL'", "'OR'", "'VALUE'", 
        "'VALUES'", "'('", "')'", "','"
    ];

    public static readonly symbolicNames = [
        null, "KKEY_IDENTIFIER", "NUMBER", "STRING", "EQ", "LT", "LT_EQ", 
        "GT", "GT_EQ", "REGEX_MATCH", "ALARM", "ALL", "AND", "ANY", "HAS", 
        "IN", "IS", "LIKE", "MARK", "MATCHES", "NO", "NOT", "NULL", "OR", 
        "VALUE", "VALUES", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", "COMMA", 
        "SPACES"
    ];
    public static readonly ruleNames = [
        "parse", "criteria", "simple_criteria", "criterion_all", "criterion_kkey_with_value", 
        "criterion_kkey_with_value_in", "criterion_kkey_is_null", "criterion_has_no_alarm", 
        "criterion_has_alarm", "criterion_monitoring_has_mark", "comparison_operator", 
        "kkey_value",
    ];

    public get grammarFileName(): string { return "CriteriaQueryAntlrParser.g4"; }
    public get literalNames(): (string | null)[] { return CriteriaQueryAntlrParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return CriteriaQueryAntlrParser.symbolicNames; }
    public get ruleNames(): string[] { return CriteriaQueryAntlrParser.ruleNames; }
    public get serializedATN(): number[] { return CriteriaQueryAntlrParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, CriteriaQueryAntlrParser._ATN, CriteriaQueryAntlrParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public parse(): ParseContext {
        let localContext = new ParseContext(this.context, this.state);
        this.enterRule(localContext, 0, CriteriaQueryAntlrParser.RULE_parse);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 27;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 69232642) !== 0)) {
                {
                {
                this.state = 24;
                this.criteria(0);
                }
                }
                this.state = 29;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 30;
            this.match(CriteriaQueryAntlrParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public criteria(): CriteriaContext;
    public criteria(_p: number): CriteriaContext;
    public criteria(_p?: number): CriteriaContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new CriteriaContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, CriteriaQueryAntlrParser.RULE_criteria, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 54;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                {
                localContext = new Simple_criteria_aliasContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 33;
                this.simple_criteria();
                }
                break;
            case 2:
                {
                localContext = new Wrapped_criteria_aliasContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 34;
                this.match(CriteriaQueryAntlrParser.OPEN_PARENTHESIS);
                this.state = 35;
                this.criteria(0);
                this.state = 36;
                this.match(CriteriaQueryAntlrParser.CLOSE_PARENTHESIS);
                }
                break;
            case 3:
                {
                localContext = new Criterion_any_value_matchesContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 38;
                this.match(CriteriaQueryAntlrParser.ANY);
                this.state = 39;
                this.match(CriteriaQueryAntlrParser.VALUE);
                this.state = 40;
                this.match(CriteriaQueryAntlrParser.MATCHES);
                this.state = 41;
                this.match(CriteriaQueryAntlrParser.OPEN_PARENTHESIS);
                this.state = 42;
                this.criteria(0);
                this.state = 43;
                this.match(CriteriaQueryAntlrParser.CLOSE_PARENTHESIS);
                }
                break;
            case 4:
                {
                localContext = new Criterion_all_values_matchesContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 45;
                this.match(CriteriaQueryAntlrParser.ALL);
                this.state = 46;
                this.match(CriteriaQueryAntlrParser.VALUES);
                this.state = 47;
                this.match(CriteriaQueryAntlrParser.MATCHES);
                this.state = 48;
                this.match(CriteriaQueryAntlrParser.OPEN_PARENTHESIS);
                this.state = 49;
                this.criteria(0);
                this.state = 50;
                this.match(CriteriaQueryAntlrParser.CLOSE_PARENTHESIS);
                }
                break;
            case 5:
                {
                localContext = new Criterion_notContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 52;
                this.match(CriteriaQueryAntlrParser.NOT);
                this.state = 53;
                this.criteria(3);
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 78;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 76;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
                    case 1:
                        {
                        localContext = new Criterion_andContext(new CriteriaContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, CriteriaQueryAntlrParser.RULE_criteria);
                        this.state = 56;
                        if (!(this.precpred(this.context, 2))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 2)");
                        }
                        this.state = 57;
                        this.match(CriteriaQueryAntlrParser.AND);
                        this.state = 58;
                        this.criteria(0);
                        this.state = 63;
                        this.errorHandler.sync(this);
                        alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
                        while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                            if (alternative === 1) {
                                {
                                {
                                this.state = 59;
                                this.match(CriteriaQueryAntlrParser.AND);
                                this.state = 60;
                                this.criteria(0);
                                }
                                }
                            }
                            this.state = 65;
                            this.errorHandler.sync(this);
                            alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
                        }
                        }
                        break;
                    case 2:
                        {
                        localContext = new Criterion_orContext(new CriteriaContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, CriteriaQueryAntlrParser.RULE_criteria);
                        this.state = 66;
                        if (!(this.precpred(this.context, 1))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                        }
                        this.state = 67;
                        this.match(CriteriaQueryAntlrParser.OR);
                        this.state = 68;
                        this.criteria(0);
                        this.state = 73;
                        this.errorHandler.sync(this);
                        alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
                        while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                            if (alternative === 1) {
                                {
                                {
                                this.state = 69;
                                this.match(CriteriaQueryAntlrParser.OR);
                                this.state = 70;
                                this.criteria(0);
                                }
                                }
                            }
                            this.state = 75;
                            this.errorHandler.sync(this);
                            alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
                        }
                        }
                        break;
                    }
                    }
                }
                this.state = 80;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public simple_criteria(): Simple_criteriaContext {
        let localContext = new Simple_criteriaContext(this.context, this.state);
        this.enterRule(localContext, 4, CriteriaQueryAntlrParser.RULE_simple_criteria);
        try {
            this.state = 88;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 81;
                this.criterion_all();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 82;
                this.criterion_kkey_with_value();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 83;
                this.criterion_kkey_with_value_in();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 84;
                this.criterion_kkey_is_null();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 85;
                this.criterion_has_no_alarm();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 86;
                this.criterion_has_alarm();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 87;
                this.criterion_monitoring_has_mark();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public criterion_all(): Criterion_allContext {
        let localContext = new Criterion_allContext(this.context, this.state);
        this.enterRule(localContext, 6, CriteriaQueryAntlrParser.RULE_criterion_all);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 90;
            this.match(CriteriaQueryAntlrParser.ALL);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public criterion_kkey_with_value(): Criterion_kkey_with_valueContext {
        let localContext = new Criterion_kkey_with_valueContext(this.context, this.state);
        this.enterRule(localContext, 8, CriteriaQueryAntlrParser.RULE_criterion_kkey_with_value);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 92;
            this.match(CriteriaQueryAntlrParser.KKEY_IDENTIFIER);
            this.state = 93;
            this.comparison_operator();
            this.state = 94;
            this.kkey_value();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public criterion_kkey_with_value_in(): Criterion_kkey_with_value_inContext {
        let localContext = new Criterion_kkey_with_value_inContext(this.context, this.state);
        this.enterRule(localContext, 10, CriteriaQueryAntlrParser.RULE_criterion_kkey_with_value_in);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 96;
            this.match(CriteriaQueryAntlrParser.KKEY_IDENTIFIER);
            this.state = 97;
            this.match(CriteriaQueryAntlrParser.IN);
            this.state = 98;
            this.match(CriteriaQueryAntlrParser.OPEN_PARENTHESIS);
            this.state = 99;
            this.kkey_value();
            this.state = 104;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 28) {
                {
                {
                this.state = 100;
                this.match(CriteriaQueryAntlrParser.COMMA);
                this.state = 101;
                this.kkey_value();
                }
                }
                this.state = 106;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 107;
            this.match(CriteriaQueryAntlrParser.CLOSE_PARENTHESIS);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public criterion_kkey_is_null(): Criterion_kkey_is_nullContext {
        let localContext = new Criterion_kkey_is_nullContext(this.context, this.state);
        this.enterRule(localContext, 12, CriteriaQueryAntlrParser.RULE_criterion_kkey_is_null);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 109;
            this.match(CriteriaQueryAntlrParser.KKEY_IDENTIFIER);
            this.state = 110;
            this.match(CriteriaQueryAntlrParser.IS);
            this.state = 111;
            this.match(CriteriaQueryAntlrParser.NULL);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public criterion_has_no_alarm(): Criterion_has_no_alarmContext {
        let localContext = new Criterion_has_no_alarmContext(this.context, this.state);
        this.enterRule(localContext, 14, CriteriaQueryAntlrParser.RULE_criterion_has_no_alarm);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 113;
            this.match(CriteriaQueryAntlrParser.HAS);
            this.state = 114;
            this.match(CriteriaQueryAntlrParser.NO);
            this.state = 115;
            this.match(CriteriaQueryAntlrParser.ALARM);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public criterion_has_alarm(): Criterion_has_alarmContext {
        let localContext = new Criterion_has_alarmContext(this.context, this.state);
        this.enterRule(localContext, 16, CriteriaQueryAntlrParser.RULE_criterion_has_alarm);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 117;
            this.match(CriteriaQueryAntlrParser.HAS);
            this.state = 118;
            this.match(CriteriaQueryAntlrParser.ALARM);
            this.state = 119;
            this.match(CriteriaQueryAntlrParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public criterion_monitoring_has_mark(): Criterion_monitoring_has_markContext {
        let localContext = new Criterion_monitoring_has_markContext(this.context, this.state);
        this.enterRule(localContext, 18, CriteriaQueryAntlrParser.RULE_criterion_monitoring_has_mark);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 121;
            this.match(CriteriaQueryAntlrParser.HAS);
            this.state = 122;
            this.match(CriteriaQueryAntlrParser.MARK);
            this.state = 123;
            this.match(CriteriaQueryAntlrParser.NUMBER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public comparison_operator(): Comparison_operatorContext {
        let localContext = new Comparison_operatorContext(this.context, this.state);
        this.enterRule(localContext, 20, CriteriaQueryAntlrParser.RULE_comparison_operator);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 125;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 132080) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public kkey_value(): Kkey_valueContext {
        let localContext = new Kkey_valueContext(this.context, this.state);
        this.enterRule(localContext, 22, CriteriaQueryAntlrParser.RULE_kkey_value);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 127;
            _la = this.tokenStream.LA(1);
            if(!(_la === 2 || _la === 3)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 1:
            return this.criteria_sempred(localContext as CriteriaContext, predIndex);
        }
        return true;
    }
    private criteria_sempred(localContext: CriteriaContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 2);
        case 1:
            return this.precpred(this.context, 1);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!CriteriaQueryAntlrParser.__ATN) {
            CriteriaQueryAntlrParser.__ATN = new antlr.ATNDeserializer().deserialize(CriteriaQueryAntlrParser._serializedATN);
        }

        return CriteriaQueryAntlrParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(CriteriaQueryAntlrParser.literalNames, CriteriaQueryAntlrParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return CriteriaQueryAntlrParser.vocabulary;
    }

    private static readonly decisionsToDFA = CriteriaQueryAntlrParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ParseContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.EOF, 0)!;
    }
    public criteria(): CriteriaContext[];
    public criteria(i: number): CriteriaContext | null;
    public criteria(i?: number): CriteriaContext[] | CriteriaContext | null {
        if (i === undefined) {
            return this.getRuleContexts(CriteriaContext);
        }

        return this.getRuleContext(i, CriteriaContext);
    }
    public override get ruleIndex(): number {
        return CriteriaQueryAntlrParser.RULE_parse;
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterParse) {
             listener.enterParse(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitParse) {
             listener.exitParse(this);
        }
    }
}


export class CriteriaContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public override get ruleIndex(): number {
        return CriteriaQueryAntlrParser.RULE_criteria;
    }
    public override copyFrom(ctx: CriteriaContext): void {
        super.copyFrom(ctx);
    }
}
export class Criterion_notContext extends CriteriaContext {
    public constructor(ctx: CriteriaContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public NOT(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.NOT, 0)!;
    }
    public criteria(): CriteriaContext {
        return this.getRuleContext(0, CriteriaContext)!;
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterCriterion_not) {
             listener.enterCriterion_not(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitCriterion_not) {
             listener.exitCriterion_not(this);
        }
    }
}
export class Criterion_orContext extends CriteriaContext {
    public constructor(ctx: CriteriaContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public criteria(): CriteriaContext[];
    public criteria(i: number): CriteriaContext | null;
    public criteria(i?: number): CriteriaContext[] | CriteriaContext | null {
        if (i === undefined) {
            return this.getRuleContexts(CriteriaContext);
        }

        return this.getRuleContext(i, CriteriaContext);
    }
    public OR(): antlr.TerminalNode[];
    public OR(i: number): antlr.TerminalNode | null;
    public OR(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(CriteriaQueryAntlrParser.OR);
    	} else {
    		return this.getToken(CriteriaQueryAntlrParser.OR, i);
    	}
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterCriterion_or) {
             listener.enterCriterion_or(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitCriterion_or) {
             listener.exitCriterion_or(this);
        }
    }
}
export class Wrapped_criteria_aliasContext extends CriteriaContext {
    public constructor(ctx: CriteriaContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public OPEN_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.OPEN_PARENTHESIS, 0)!;
    }
    public criteria(): CriteriaContext {
        return this.getRuleContext(0, CriteriaContext)!;
    }
    public CLOSE_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.CLOSE_PARENTHESIS, 0)!;
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterWrapped_criteria_alias) {
             listener.enterWrapped_criteria_alias(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitWrapped_criteria_alias) {
             listener.exitWrapped_criteria_alias(this);
        }
    }
}
export class Criterion_any_value_matchesContext extends CriteriaContext {
    public constructor(ctx: CriteriaContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public ANY(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.ANY, 0)!;
    }
    public VALUE(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.VALUE, 0)!;
    }
    public MATCHES(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.MATCHES, 0)!;
    }
    public OPEN_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.OPEN_PARENTHESIS, 0)!;
    }
    public criteria(): CriteriaContext {
        return this.getRuleContext(0, CriteriaContext)!;
    }
    public CLOSE_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.CLOSE_PARENTHESIS, 0)!;
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterCriterion_any_value_matches) {
             listener.enterCriterion_any_value_matches(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitCriterion_any_value_matches) {
             listener.exitCriterion_any_value_matches(this);
        }
    }
}
export class Simple_criteria_aliasContext extends CriteriaContext {
    public constructor(ctx: CriteriaContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public simple_criteria(): Simple_criteriaContext {
        return this.getRuleContext(0, Simple_criteriaContext)!;
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterSimple_criteria_alias) {
             listener.enterSimple_criteria_alias(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitSimple_criteria_alias) {
             listener.exitSimple_criteria_alias(this);
        }
    }
}
export class Criterion_andContext extends CriteriaContext {
    public constructor(ctx: CriteriaContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public criteria(): CriteriaContext[];
    public criteria(i: number): CriteriaContext | null;
    public criteria(i?: number): CriteriaContext[] | CriteriaContext | null {
        if (i === undefined) {
            return this.getRuleContexts(CriteriaContext);
        }

        return this.getRuleContext(i, CriteriaContext);
    }
    public AND(): antlr.TerminalNode[];
    public AND(i: number): antlr.TerminalNode | null;
    public AND(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(CriteriaQueryAntlrParser.AND);
    	} else {
    		return this.getToken(CriteriaQueryAntlrParser.AND, i);
    	}
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterCriterion_and) {
             listener.enterCriterion_and(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitCriterion_and) {
             listener.exitCriterion_and(this);
        }
    }
}
export class Criterion_all_values_matchesContext extends CriteriaContext {
    public constructor(ctx: CriteriaContext) {
        super(ctx.parent, ctx.invokingState);
        super.copyFrom(ctx);
    }
    public ALL(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.ALL, 0)!;
    }
    public VALUES(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.VALUES, 0)!;
    }
    public MATCHES(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.MATCHES, 0)!;
    }
    public OPEN_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.OPEN_PARENTHESIS, 0)!;
    }
    public criteria(): CriteriaContext {
        return this.getRuleContext(0, CriteriaContext)!;
    }
    public CLOSE_PARENTHESIS(): antlr.TerminalNode {
        return this.getToken(CriteriaQueryAntlrParser.CLOSE_PARENTHESIS, 0)!;
    }
    public override enterRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.enterCriterion_all_values_matches) {
             listener.enterCriterion_all_values_matches(this);
        }
    }
    public override exitRule(listener: CriteriaQueryAntlrParserListener): void {
        if(listener.exitCriterion_all_values_matches) {
             listener.exitCriterion_all_values_matches(this);
        }
    }
}

